# sidekick

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.ko.md  README.md  install.sh  pyproject.toml
docs/: DEVELOPMENT_WORKFLOW.md  GIT_CONVENTIONS.md  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_GUIDE.md  TOOL_CREATION_GUIDE.md
scripts/: start.sh  tool-installer.sh  tool-uploader.sh
src/: config.py
src/core/: lifecycle.py
src/core/agent/: __init__.py  core.py  factory.py  runner.py  utils.py
src/core/commands/: __init__.py  executor.py  models.py  parser.py  prompts.py  repository.py  tools.py
src/core/context/: __init__.py  image.py
src/core/memory/: __init__.py  prompts.py
src/core/scheduler/: __init__.py  executor.py  manager.py  models.py  notification.py  time_parser.py  tools.py
src/interfaces/: __init__.py
src/interfaces/api/: __init__.py  main.py  schemas.py  security.py  task_repository.py  tasks.py
src/interfaces/slack/: __init__.py  bot.py  context.py  handlers.py  images.py  progress.py  slack_api.py
src/middleware/guardrails/: __init__.py  core.py  enforcer.py
src/middleware/postprocessing/: __init__.py
src/middleware/preprocessing/: __init__.py
src/tools/: __init__.py  catalog.py  mcp_client.py  mcp_registry.py  registry.py
src/tools/custom/: __init__.py
src/tools/mcp/: __init__.py  playwright.py
src/utils/: __init__.py  image_handler.py  logging.py  observability.py  slack_files.py  slack_formatter.py
tests/: conftest.py  test_agent_core.py  test_api.py  test_commands.py  test_guardrails.py  test_image_handler.py  test_integration.py  test_mcp_registry.py  test_memory.py  test_message_processing.py  test_playwright_cleanup.py  test_scheduler.py  test_slack_bot.py  test_slack_formatter.py  test_time_parser.py
